--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <h1>Potionfy</h1>
         <p>Creazioni Magiche per Tutti i Tuoi Bisogni</p>
         <h1>GILL e PLAKU</h1>
+        <form></form>
     </header>
     <!-- Altri contenuti del tuo sito andranno qui -->
 </body>
