Update1 index.html

--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
         <h1>GILL e PLAKU</h1>
     </header>
     <!-- Altri contenuti del tuo sito andranno qui -->
+    <form action="mailto:harry@potionfy.com" method="post" enctype="text/plain">
+
+</form>
 </body>
 </html>
